# ask-cqrs

./: .gitignore  Cargo.toml
ask-cqrs/: .gitignore  Cargo.toml  docker-compose.yml
ask-cqrs/src/: aggregate.rs  event_handler.rs  lib.rs  view.rs
ask-cqrs/tests/: integration_test.rs
ask-cqrs/tests/common/: bank_account_view.rs  bank_aggregate.rs  bank_events.rs  fraud_detection_handler.rs  mod.rs
ask_cqrs_macros/: Cargo.toml
ask_cqrs_macros/src/: lib.rs
example/: aggregate.rs  test.rs
example/axum_backend/: Cargo.toml  openapi.json
example/axum_backend/src/: auth.rs  main.rs  mod.rs
example/axum_backend/src/domain/: mod.rs
example/axum_backend/src/domain/bank_stream/: aggregate.rs  command.rs  mod.rs
example/axum_backend/src/domain/view/: bank_accounts_view.rs
example/axum_frontend/: bun.lockb  package.json
example/axum_frontend/src/: App.tsx
example/axum_frontend/src/client/: index.ts
example/axum_frontend/src/client/models/: BankAccountCommand.ts  BankAccountError.ts
example/axum_frontend/src/client/services/: BankStreamService.ts
src/: aggregate.rs  command.rs  docker-compose.yml  event.rs  event_handler.rs  lib.rs  postgres_store.rs  read_model.rs  schema.sql  test_utils.rs  view.rs  view_event_handler.rs
src/store/: event_processor.rs  event_store.rs  mod.rs  postgres_event_store.rs  postgres_view_store.rs  stream_claim.rs  view_store.rs
src/view/: view_store.rs
tests/: aggregate_tests.rs  competing_consumers_test.rs  dead_letter_test.rs  docker-compose.yml  fraud_detection_tests.rs  integration_test.rs  test_utils.rs  view_tests.rs
tests/common/: bank_account.rs  bank_account_view.rs  bank_aggregate.rs  bank_aggregate_old.txt  bank_liquidity_view.rs  bank_notification_view.rs  competing_consumer_handler.rs  fraud_detection_handler.rs  mod.rs
