

[package]
name = "ask-cqrs"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.86"
async-trait = "0.1.80"
dashmap = "6.0.1"
eventstore = "3.0.0"
serde = "1.0.203"
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typetag = "0.2.18"
utoipa = "4.2.3"
uuid = "1.9.1"

[lib]
path ='src/lib.rs'
