[package]
name = "ask-cqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.85"
axum = { version = "0.7", features = ["macros"] }
dashmap = "6.0.1"
eventstore = "3.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typetag = "0.2.18"
utoipa = "4.2.3"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
futures = "0.3"
deadpool-postgres = { version = "0.12", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
once_cell = "1.19"

[lib]
path ='src/lib.rs'
