[package]
name = "ask-cqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.85"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typetag = "0.2.18"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "uuid", "runtime-tokio-native-tls", "time", "chrono"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
scopeguard = "1.2.0"

[lib]
path ='src/lib.rs'

[dev-dependencies]
serial_test = "2.0"
