[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
ask-cqrs = { path = "../../ask-cqrs" }
serde = "1.0.210"
utoipa = "4.2.3"
eventstore = "3.0.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
serde_json = "1.0.128"
typetag = "0.2.18"
uuid = "1.10.0"
